--- a/FirstProjectSecondCourse/src/View/FrmDisc.form
+++ b/FirstProjectSecondCourse/src/View/FrmDisc.form
@@ -133,7 +133,7 @@
                           <Component id="btnPlay" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="51" max="32767" attributes="0"/>
+                  <EmptySpace pref="21" max="32767" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
@@ -255,6 +255,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Buy"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuyActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnOrder">
           <Properties>
@@ -262,14 +265,18 @@
               <Font name="Comic Sans MS" size="14" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Pre order"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOrderActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnPlay">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Comic Sans MS" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Play"/>
+            <Property name="text" type="java.lang.String" value="Play/Stop"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
